<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BlueCtrl</string>

    <string name="close">Close</string>
    <string name="more_info">More info\u2026</string>
    <string name="changelog">Changelog</string>

    <string name="description_app_icon">Application Icon</string>
    <string name="description_info_image">Info Image</string>
    <string name="description_previous">Previous</string>
    <string name="description_next">Next</string>
    <string name="description_keyboard">Keyboard</string>
    <string name="description_android_back">Back</string>
    <string name="description_android_home">Home</string>
    <string name="description_android_menu">Menu</string>
    <string name="description_ps3_circle">Circle</string>
    <string name="description_ps3_square">Square</string>
    <string name="description_ps3_triangle">Triangle</string>
    <string name="description_ps3_x">X</string>
    <string name="description_ps3_select">Select</string>
    <string name="description_ps3_ps">PlayStation</string>
    <string name="description_ps3_start">Start</string>

    <string name="os_android">Android</string>
    <string name="os_ios">iOS</string>
    <string name="os_linux">Linux</string>
    <string name="os_osx">Mac OS X</string>
    <string name="os_playstation3">PlayStation 3</string>
    <string name="os_windows">Windows</string>
    <string name="os_undefined">Other</string>

    <string name="unnamed_device_playstation3">PS3 (%1$s)</string>

    <string name="menu_about">About</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_remove_device">Remove Device</string>
    <string name="menu_compose_text">Compose Text</string>
    <string name="menu_paste">Paste Text</string>
    <string name="menu_tutorial">Tutorial</string>

    <string name="device_list_add_device">Add Device</string>
    <string name="device_list_empty">No device configured</string>

    <string name="pairing_device_os_title">Remote device OS</string>
    <string name="pairing_title">Add Device</string>
    <string name="pairing_search_for_device_text"><![CDATA[Search on the remote system for the Bluetooth device “<b>%1$s</b>” and pair it.]]></string>
    <string name="pairing_remove_if_paired_text">If it is already paired, remove it and pair it again.</string>
    <string name="pairing_device_title">Pairing\u2026</string>
    <string name="pairing_failed_title">Pairing failed</string>
    <string name="pairing_service_conflict_windows_text">Sorry, but you cannot use this app with a Windows system because another Bluetooth input service is active on your device.</string>

    <string name="compose_text_hint">Type text</string>
    <string name="compose_text_send">Send</string>

    <string name="device_preferences">Device settings</string>
    <string name="pref_keymap">Keyboard layout</string>
    <string name="pref_mouse_sensitivity">Touchpad sensitivity</string>
    <string name="pref_touchpad_gesture_mode">Touchpad gestures</string>
    <string name="pref_touchpad_buttons">Touchpad buttons</string>
    <string name="pref_scroll_sensitivity">Scroll sensitivity</string>
    <string name="pref_invert_scroll">Invert scroll direction</string>
    <string name="pref_fling_scroll">Fling scroll</string>

    <string name="pref_touchpad_gesture_mode_default">Default</string>
    <string name="pref_touchpad_gesture_mode_android">Android</string>
    <string name="pref_touchpad_gesture_mode_gnome_shell">Gnome Shell</string>
    <string name="pref_touchpad_gesture_mode_osx">Mac OS X</string>
    <string name="pref_touchpad_gesture_mode_playstation3">PlayStation 3</string>
    <string name="pref_touchpad_gesture_mode_ubuntu_unity">Ubuntu Unity</string>
    <string name="pref_touchpad_gesture_mode_windows7">Windows 7</string>
    <string name="pref_touchpad_gesture_mode_windows8">Windows 8</string>

    <string name="pref_touchpad_buttons_show">Always show</string>
    <string name="pref_touchpad_buttons_show_portrait">Show on portrait mode</string>
    <string name="pref_touchpad_buttons_hide">Always hide</string>

    <string name="info_title_connecting">Connecting\u2026</string>
    <string name="info_title_disconnected">Disconnected</string>
    <string name="info_title_sending_text">Sending text\u2026</string>
    <string name="info_text_reconnect">Tap to reconnect.</string>
    <string name="info_title_permission_denied">Permission denied</string>
    <string name="info_text_pair_again">Try to pair the devices again.</string>
    <string name="info_title_host_unavailable">Host unavailable</string>
    <string name="info_text_host_unavailable">Make sure you are in range and Bluetooth is active.</string>
    <string name="info_title_connection_refused">Connection refused</string>
    <string name="info_text_connection_refused">The remote device is busy or the devices aren’t correctly paired.</string>
    <string name="info_title_authorization_error">Authorization error</string>
    <string name="info_title_connection_timeout">Connection timed out</string>
    <string name="info_title_connection_problem">Connection problem</string>
    <string name="info_text_ios_bt_off_on">Try again after you have turned Bluetooth off and on again on the remote device.</string>

    <string name="about_version">Version %1$s</string>
    <string name="about_app_text">A Bluetooth input device emulator that can control remote devices.</string>
    <string name="about_email_text">Send email</string>
    <string name="about_webpage_text">Visit web page</string>

    <string name="error_root_required">Root permissions required</string>
    <string name="error_bluetooth_required">Bluetooth required</string>
    <string name="error_incompatible">Your Android version isn’t compatible with this app.</string>
    <string name="error_critical">The application encountered a problem and cannot continue (Error %1$d).</string>

    <string name="tutorial_title">Touchpad tutorial</string>
    <string name="tutorial_introduction_text">This tutorial will show you how to use the touchpad. If you want you can directly test the gestures inside the tutorial.</string>
    <string name="tutorial_move_title">Move pointer</string>
    <string name="tutorial_move_text">Touch and move to move the mouse pointer.</string>
    <string name="tutorial_1f_tap_title">Left mouse button</string>
    <string name="tutorial_1f_tap_text">Tap with one-finger</string>
    <string name="tutorial_2f_tap_title">Right mouse button</string>
    <string name="tutorial_2f_tap_text">Tap with two-fingers</string>
    <string name="tutorial_3f_tap_title">Middle mouse button</string>
    <string name="tutorial_3f_tap_text">Tap with three-fingers</string>
    <string name="tutorial_drag_title">Drag</string>
    <string name="tutorial_drag_text">Tap and quickly touch to start a drag action.</string>
    <string name="tutorial_2f_scroll_title">Scroll</string>
    <string name="tutorial_2f_scroll_text">Slide two fingers in any direction to scroll.</string>
    <string name="tutorial_1f_scroll_title">One-finger scroll</string>
    <string name="tutorial_1f_scroll_text">You can also scroll if you slide up or down on the right side of the touchpad.</string>
    <string name="tutorial_pinch_zoom_title">Pinch to zoom</string>
    <string name="tutorial_pinch_zoom_text">Pinch with two fingers to zoom in or out.</string>
    <string name="tutorial_3f_lr_navigate_title">Back and Forward</string>
    <string name="tutorial_3f_lr_navigate_text">Swipe left or right with three fingers to move back and forward in some applications.</string>
    <string name="tutorial_3f_d_desktop_title">Show desktop</string>
    <string name="tutorial_3f_d_desktop_text">Swipe down with three fingers to show the desktop.</string>
    <string name="tutorial_4f_lr_snap_window_title">Snap window left or right</string>
    <string name="tutorial_4f_lr_snap_window_text">Swipe left or right with four fingers to snap the current window to the left or right side of the screen.</string>
    <string name="tutorial_4f_ud_max_min_window_title">Maximize/minimize window</string>
    <string name="tutorial_4f_ud_max_min_window_text">Swipe up or down with four fingers to maximize or minimize the current window.</string>
    <string name="tutorial_3f_u_android_title">Home</string>
    <string name="tutorial_3f_u_android_text">Swipe up with three fingers to show the home screen.</string>
    <string name="tutorial_3f_l_android_title">Back</string>
    <string name="tutorial_3f_l_android_text">Swipe left with three fingers to navigate back.</string>
    <string name="tutorial_3f_d_gnome_shell_title">Activities overview</string>
    <string name="tutorial_3f_d_gnome_shell_text">Swipe down with three fingers to show or hide the activities overview.</string>
    <string name="tutorial_3f_u_gnome_shell_title">Message tray</string>
    <string name="tutorial_3f_u_gnome_shell_text">Swipe up with three fingers to show or hide the message tray.</string>
    <string name="tutorial_4f_ud_gnome_shell_title">Change workspace</string>
    <string name="tutorial_4f_ud_gnome_shell_text">Swipe up or down with four fingers to change the workspace.</string>
    <string name="tutorial_4f_u_osx_title">Mission Control</string>
    <string name="tutorial_4f_u_osx_text">Swipe up with four fingers to get a bird’s-eye view of everything running on your Mac.</string>
    <string name="tutorial_4f_d_osx_title">App Exposé</string>
    <string name="tutorial_4f_d_osx_text">Swipe down with four fingers to see all of your open apps.</string>
    <string name="tutorial_4f_lr_osx_title">Change workspace</string>
    <string name="tutorial_4f_lr_osx_text">Swipe left or right with four fingers to change the workspace.</string>
    <string name="tutorial_4f_lr_playstation3_title">Change window</string>
    <string name="tutorial_4f_lr_playstation3_text">Swipe left or right with four fingers to change the browser window.</string>
    <string name="tutorial_3f_d_ubuntu_unity_title">Open Launcher</string>
    <string name="tutorial_3f_d_ubuntu_unity_text">Swipe down with three fingers to show or hide the Launcher.</string>
    <string name="tutorial_3f_u_ubuntu_unity_title">Workspace Switcher</string>
    <string name="tutorial_3f_u_ubuntu_unity_text">Swipe up with three fingers to show or hide the Workspace Switcher.</string>
    <string name="tutorial_3f_u_windows7_title">Start menu</string>
    <string name="tutorial_3f_u_windows7_text">Swipe up with three fingers to show the Windows start menu.</string>
    <string name="tutorial_edge_l_windows8_title">Switch applications</string>
    <string name="tutorial_edge_l_windows8_text">Swipe with one finger from the left edge to switch to the last application.</string>
    <string name="tutorial_edge_r_windows8_title">Charms menu</string>
    <string name="tutorial_edge_r_windows8_text">Swipe with one finger from the right edge to open the charms menu.</string>
    <string name="tutorial_edge_t_windows8_title">Drag window</string>
    <string name="tutorial_edge_t_windows8_text">Swipe with one finger from the top edge to drag a full-screen window.</string>
    <string name="tutorial_edge_b_windows8_title">Application menu</string>
    <string name="tutorial_edge_b_windows8_text">Swipe with one finger from the bottom edge to open the application menu.</string>
    <string name="tutorial_3f_u_windows8_title">Start screen</string>
    <string name="tutorial_3f_u_windows8_text">Swipe up with three fingers to show or hide the Windows start screen.</string>
</resources>
