<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout style="@style/action_bar">
        <ImageView style="@style/action_bar_app_icon"
                   android:src="@drawable/app_icon_small"
                   android:contentDescription="@string/description_app_icon" />
        <TextView style="@style/action_bar_title"
                  android:text="@string/app_name" />
        <ImageButton style="@style/action_bar_button"
                     android:id="@+id/button_add_device"
                     android:src="@drawable/ab_btn_add"
                     android:contentDescription="@string/device_list_add_device" />
    </LinearLayout>

    <ListView android:id="@android:id/list"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1" />

    <TextView style="@style/list_empty"
              android:id="@android:id/empty"
              android:layout_weight="1"
              android:text="@string/device_list_empty" />
</LinearLayout>
