<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:baselineAligned="false">

    <LinearLayout style="@style/action_bar">
        <ImageButton style="@style/action_bar_home"
                     android:id="@+id/action_bar_home"
                     android:src="@drawable/action_bar_home"
                     android:contentDescription="@string/description_app_icon" />
        <TextView style="@style/action_bar_title"
                  android:id="@+id/action_bar_title" />
        <ImageButton style="@style/action_bar_button"
                     android:id="@+id/button_keyboard"
                     android:src="@drawable/ab_btn_keyboard"
                     android:contentDescription="@string/description_keyboard" />
    </LinearLayout>

    <ViewFlipper style="@style/touchpad_flipper"
                 android:id="@+id/flipper"
                 android:layout_height="0dp"
                 android:layout_width="match_parent"
                 android:layout_weight="1">

        <!-- Connected -->
        <RelativeLayout style="@style/touchpad_content"
                        android:id="@+id/view_connected">
            <org.ronsdev.bluectrl.widget.KeyboardInputView
                android:id="@+id/keyboard_input"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />
            <org.ronsdev.bluectrl.widget.TouchpadView
                android:id="@+id/touchpad"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />
        </RelativeLayout>

        <!-- Disconnected -->
        <RelativeLayout style="@style/touchpad_content"
                        android:id="@+id/view_disconnected">
            <LinearLayout style="@style/info_block">
                <ImageView style="@style/info_block_image"
                           android:id="@+id/info_image"
                           android:contentDescription="@string/description_info_image" />
                <LinearLayout style="@style/info_block_content">
                    <TextView style="@style/info_block_title"
                              android:id="@+id/info_title" />
                    <TextView style="@style/info_block_text.first"
                              android:id="@+id/info_text" />
                    <TextView style="@style/info_block_text"
                              android:id="@+id/info_reconnect"
                              android:text="@string/info_text_reconnect" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <!-- Connecting -->
        <RelativeLayout style="@style/touchpad_content"
                        android:id="@+id/view_connecting">
            <LinearLayout style="@style/info_block">
                <ProgressBar style="@style/info_block_wait" />
                <LinearLayout style="@style/info_block_content">
                    <TextView style="@style/info_block_title"
                              android:text="@string/info_title_connecting" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </ViewFlipper>

</LinearLayout>